--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,21 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.10.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@song-app/types": "workspace:*",
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
+    "nuqs": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.65.0",
     "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.2.3",
     "typescript": "^5.2.2",
     "web-vitals": "^3.4.0",
-    "@song-app/types": "workspace:*"
+    "zod": "^3.25.76"
   },
   "scripts": {
     "dev": "react-scripts start",
