--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "description": "Shared TypeScript types for song app",
   "main": "index.ts",
-  "types": "index.ts",
+  "types": "index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "default": "./index.ts"
+    }
+  },
   "scripts": {
     "build": "echo 'No build needed for types package'"
   },
