--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "redux-saga": "^1.2.3",
     "typescript": "^5.2.2",
+    "use-debounce": "^10.0.6",
     "web-vitals": "^3.4.0",
     "zod": "^3.25.76"
   },
