--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@song-app/types": "workspace:*",
+    "@song-app/utils": "workspace:*",
+    "consola": "^3.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
