--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,7 +2,12 @@
   "name": "@song-app/utils",
   "version": "1.0.0",
   "description": "Utility functions for song app",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "clean": "rm -rf dist"
+  },
   "dependencies": {
     "consola": "^3.2.3",
     "dotenv": "^16.3.1"
