--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,17 @@
+# Root-level and nested node_modules
 node_modules
-dist
-build
+*/node_modules
+apps/backend/node_modules
+packages/*/node_modules
+packages/**/node_modules
+apps/*/node_modules
+apps/**/node_modules
+**/node_modules
+
+# Build outputs
+**/dist
+**/build
+
+# Repo metadata
 .git
 .gitignore
-apps/frontend
