--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "seed": "ts-node --project tsconfig.json src/seed.ts",
     "clean": "rm -rf dist"
   },
   "dependencies": {
