--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   mongo:
     image: mongo:6
@@ -13,8 +11,8 @@ services:
 
   backend:
     build:
-      context: ./apps/backend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: apps/backend/Dockerfile
     container_name: song-backend
     ports:
       - "5000:5000"
@@ -30,18 +28,45 @@ services:
 
   frontend:
     build:
-      context: ./apps/frontend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: apps/frontend/Dockerfile
     container_name: song-frontend
     ports:
       - "3000:3000"
     environment:
       - REACT_APP_API_URL=http://localhost:5000
+      - HOST=0.0.0.0
+      - PORT=3000
+      - CHOKIDAR_USEPOLLING=true
     depends_on:
       - backend
     volumes:
-      - ./apps/frontend:/app
-      - /app/node_modules
+      - ./apps/frontend:/srv/app/apps/frontend
+      - /srv/app/apps/frontend/node_modules
+    command: sh -lc "cd /srv/app && pnpm install && cd /srv/app/apps/frontend && pnpm dev"
+
+  announce:
+    image: busybox:1.36
+    container_name: song-announce
+    profiles: ["announce"]
+    depends_on:
+      - backend
+      - frontend
+    command: >
+      sh -c "
+        echo 'Waiting for backend health...';
+        for i in 1 2 3 4 5 6 7 8 9 10; do
+          wget -qO- http://backend:5000/health >/dev/null 2>&1 && break || sleep 1;
+        done;
+        echo;
+        echo 'Song app is up:';
+        echo '  Frontend: http://localhost:3000';
+        echo '  Backend:  http://localhost:5000';
+        echo '  Docs:     http://localhost:5000/docs';
+        echo '  OpenAPI:  http://localhost:5000/openapi.json';
+        echo;
+      "
+    restart: "no"
 
 volumes:
   mongo_data:
