--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,6 +4,7 @@
   "description": "Express + MongoDB backend for song app",
   "main": "dist/index.js",
   "scripts": {
+    "predev": "pnpm -w --filter @song-app/utils build",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
